# ChangeLog for dev-java/bcmail
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/bcmail/ChangeLog,v 1.47 2015/06/14 17:52:47 monsieurp Exp $

  14 Jun 2015; Patrice Clement <monsieurp@gentoo.org> bcmail-1.50.ebuild:
  Stable for x86 via ALLARCHES. Fix bug 481960.

  19 May 2015; Agostino Sarubbo <ago@gentoo.org> bcmail-1.50.ebuild:
  Stable for amd64, wrt bug #481960

  17 May 2015; Pacho Ramos <pacho@gentoo.org> bcmail-1.50.ebuild:
  ppc64 stable wrt bug #481960

  16 May 2015; Pacho Ramos <pacho@gentoo.org> bcmail-1.50.ebuild:
  ppc stable wrt bug #481960

  03 Aug 2014; Ralph Sennhauser <sera@gentoo.org> -bcmail-1.38-r1.ebuild,
  -bcmail-1.49.ebuild:
  Remove old

*bcmail-1.50 (06 Feb 2014)

  06 Feb 2014; Tom Wijsman <TomWij@gentoo.org> +bcmail-1.50.ebuild:
  Version bump to 1.50.

*bcmail-1.38-r3 (05 Sep 2013)

  05 Sep 2013; Tom Wijsman <TomWij@gentoo.org> +bcmail-1.38-r3.ebuild,
  -bcmail-1.38-r2.ebuild:
  Properly SLOT bcprov dependency with one that's exactly the same (except for
  the SLOT) to resolve a blocker.
  (http://forums.gentoo.org/viewtopic-p-7389618.html#7389618)

  01 Sep 2013; Fabian Groffen <grobian@gentoo.org> bcmail-1.38-r2.ebuild:
  Marked *-macos

*bcmail-1.45-r2 (15 Aug 2013)

  15 Aug 2013; Tom Wijsman <TomWij@gentoo.org> +bcmail-1.45-r2.ebuild,
  -bcmail-1.45-r1.ebuild, -bcmail-1.45.ebuild:
  Revision bump. Slotted bcprov dependency. Dropped old / broken revisions.

*bcmail-1.45-r1 (15 Aug 2013)
*bcmail-1.38-r2 (15 Aug 2013)

  15 Aug 2013; Tom Wijsman <TomWij@gentoo.org> +bcmail-1.38-r2.ebuild,
  +bcmail-1.45-r1.ebuild:
  Slot dev-java/bcmail to resolve blockers.

  12 Jul 2013; Patrick Lauer <patrick@gentoo.org> bcmail-1.38-r1.ebuild:
  QA: Adding ~amd64-fbsd keyword to avoid keyword removal cascade

  14 Jun 2013; Alexis Ballier <aballier@gentoo.org> bcmail-1.49.ebuild:
  keyword ~amd64-fbsd, bug #472010

*bcmail-1.49 (01 Jun 2013)
