@@ -4,19 +4,21 @@ Hash: SHA256
 DIST bcmail-jdk14-138.tar.gz 386478 SHA256 629bbe7f00c96b201db4b76f777014763110d9de5021593505f906a31fa7bb7c SHA512 1d79aebee02a8d0017dc0b05f68e49fc031a797043eec173aa68ef0148e06b6ebe4d001a1494d6ed95114b1534ece7c47982e119ad8aec2485323babe34f3a13 WHIRLPOOL 272b1c73ffb4a46737a5a4bd5c2105a7411d6cddfcb1dd511688662fc6d55c20027cf1adb30da9a4ce24db34800cff3d71771a60d57e157b1081c1bc7f16eef7
 DIST bcmail-jdk15-145.tar.gz 483519 SHA256 e74e2a48135e9396ed3622d9dae64eb66e6e88e4b0d17a3522c8d55ee5e95d62 SHA512 2d3232d5eb1cd75ad56a7316beb32880f3f935fcd3ed0a6cb2cc3e1861dc9f0bece0cbae53471760246505adb5c28328691eb82e11fedb0b160c1248d21c48bb WHIRLPOOL abb41f525717886b21551808dfc375a691ceed1a192eb46603fb91398c132768093229389b0247a49121b098d0338f37980bd8980c0c1a85fb91754f586d411f
 DIST bcmail-jdk15on-150.tar.gz 221760 SHA256 1005a21cc5bf705801d217fb5eb90d97106bc11bf1f7079573a64b12f3e080c9 SHA512 91727ddc4bf932cfaedd3cb90a807b5fec3120e56fde3e5fc73bb5bf2e97db50a35a63e0b5e342fe29e4b974579c5cdd5d427d01c9dd8e7abd521ccd3d1959f1 WHIRLPOOL 96893e526007a9635f847010c0c37d17974b999cd71baba416cd287a31407e815ddbb6ae0069c46d362479dc369b726926a026d3267e34bfcc23aea9b523eb6f
+DIST bcmail-jdk15on-152.tar.gz 240800 SHA256 de826cc84f89b053317a4ba548a5739ed626a925d5c3d82b4192682b4abb99f4 SHA512 e7301991071709b5788e5a813ea765a5e59bb089104a031ca91a509036e7823b851f854e5f96de6a2d2ef817aad4435f78742dea3a9b1dbeb95a6cddf250619e WHIRLPOOL a332507341015a2ebee6ab7ca38af10d48d3eda339191831a126680200b9dc0de468971e5b96df2133f483cb7c044108bfe2f544fb9e09d896fd802d22aac8d3
 EBUILD bcmail-1.38-r3.ebuild 1303 SHA256 ed14d462d6a122b30916479c81a3e44da8692c24392cd99f726c7b49c2d8a5f8 SHA512 5aac2bd1e1bbe698f89950908f5c059ddb0b293a714fa77578fd3d42335274c56cc62f1763e20177a785d84715557b76cece9e525490064d08b3bf54b31798ff WHIRLPOOL 2cb83a524231e8f808592e2f85c2eb019d0c97059c15eaf4e37ac3191336339f809eeab83adc845c0494c6e40dcc821f33a8d0a0471620e1faa2727d331225b2
 EBUILD bcmail-1.45-r2.ebuild 1273 SHA256 b86cdb59f09aee4a0ecc3b63beed8057fa5350816b35838db9e39b03d92fda4a SHA512 721a8ac5ac7d5fe725f2050c1a6326453a8b03d1ec42b9eb00303aca725ea9d106dc54b92f402137b9f809b6a1246c636e16299e82a8fcb0d0c913b4bce80ce3 WHIRLPOOL c61458b223469f54aa3bba4251264e48993ed687df9fc6486d49ead6cc3ecbc076f2ab7746520a5b978dd8c9baf7d76d710b875d85323e5b33f1aa067f7dd13b
 EBUILD bcmail-1.50.ebuild 1847 SHA256 dc0ac5f9ec4697512657039dfc80dd06faef1d89a03740a6a3599539785747b0 SHA512 bada32595a8cd8526e58d5b7a028bfa4d47e58422016dc81db4012ecf6f6275023f4ee6f2f7b05eaf54bfe2049968679b122e79c422f9a7fb7a56172a1709cfe WHIRLPOOL d8774409620a483c1510bff8c8eb1445d56c5a947b6dc21cbdfcec1991a97be930ab73ae39b576939935442e151e65849b663d0c5db4ea0d1861730fc55a568f
-MISC ChangeLog 6237 SHA256 0c1f6c260b8befd0b20a57622e042d04813766225747fa76bbed6940d37a678a SHA512 86aacb2fe3bf4e6dd010f7cd84071a042c3749e16482b74dd1ecdf080b8518c6cab8bb83800f3e09fcf7bee858fa954bb96f11dacf32f2cfa8ed1b749ca060d8 WHIRLPOOL 86b20d4d6a946ac887f5980ef46b33eadf7c8adf36c2c8505d703b4e0e917088b90536bb3e7af9efb6e10b404c3b1726297be7bb1dd6855b63e9f1f4953a4a26
+EBUILD bcmail-1.52.ebuild 1835 SHA256 9b1d4d770aed4dbe98a36e92788ac3f3222064ec7cfddd0dd56dd60be0ab6c56 SHA512 245d46273537b16716efd0e6511ef99abf47c69df297b199437dd91baff496be1ae64966d7be7db9286fdb69a06f941e2696c16e7860097519e850301e7e29ca WHIRLPOOL 33d6884080444b423fbcb5e920b2ad3ee80b08bf743240403b8629897907d175dc92b3769071aa0a17d3295a3ae97e00b9433cd5a7487cdc5dae1cfb943c7e6d
+MISC ChangeLog 6375 SHA256 b68fe62f61b8699c5119feed5fa64f322967f4ed71042907c45d784318893076 SHA512 41d422ea1c36f4e4eb30a94d356e8816251205d6ef6a5be149aa1a29f2cf6e148b1864cc27cf3956653130b74bd309875137c6353bf5f3f69b6f48715a50e1cf WHIRLPOOL 51a903c4ac2b21246b8d5b63c74574e2bebc4b101beef1091cebf9d6cc010978a8109a7d53129de0eadd62b55cbbbf3dc3f17dbc1bad061d75ee2479bbe424ed
 MISC metadata.xml 291 SHA256 8c4fcd1bc741de757078e811eae3b33f67ea2b30780bb6fd29303216820b58cb SHA512 bba7360c64a44c9a6a48e4604b9af368b28dbce44981599c14e6cb92999fa2556b1d99006091a3556f6563666e884ee28717fbfdf77b3972e1e8871aff713fb4 WHIRLPOOL fb9c248612f30d4b35e58b328e931ee67cf08a91c110df08276aafe6a17406da60d3dd93f9f4404c5e802a10484918aa31696d3381b801defabfc79fe03ed4c4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVfb7pAAoJEJGRpfGTSRu4ltIIAJiPjTNaZ2q2S+yy/a7dv5Hi
-0EBJZ81iunJT+P6szKlKCdtVI6AFpWHBItAeJjtA7a5u1wPzmznCHQyMBaUyym5P
-gqQ8S7u0Cpm91fJZ7rSVCS8+uM4OvnKXnqQ8HWxvsTh8dQ54EKbLdtKSSiL0xnx1
-CLF1WVirZemmJKRf7Qy677UwGWvcL82YJ4yGeOGlH4saGcPHl4jsR3havXw0jaaB
-16A+WZ9Bwsbjp6AKODh6fAXrap2AgYbdFmyeJxK2WeESyNzd+Hrk0TzgNAY6YUf+
-dbJnw+LB0vd58hy9yLwbsl1qbBqF5cSFBh5pdDiysvhg95C/hGPw1eNW17um478=
-=NL31
+iQEcBAEBCAAGBQJVvQMlAAoJEJGRpfGTSRu4WakH/3fI5Wy9eEOr6ejx/K3Y3vEH
+/0pG2sNJdU7/IDODsXVs6xFNU1wkb0/hl7YJlJoznWfJ/Fx+sFnTz6ljG+9LO0Rn
+irMCCkJtrAMomaG+cvimtgKYf4NgM5atKHnG0TNt9qcK8Jq4uDhzEqCknxXr8vC+
+RjPWrWHe7O7CBf/u6rkspgxB3awdAptvkygSxlpjlglVt+RmKkVDhabPmS5Eguhj
+0LfqNcuZ59q8sOq/tI68vcC5ZApf+3NpjKtvIwHVcYhwJzeG/SmTeK88YpYAzyzq
+Dm7KukmH+d6TwU6jhuNnFs22j7MNj3D05xwWYm4uVFABFx712yfZLzQWPobx3jY=
+=fKBR
 -----END PGP SIGNATURE-----
