@@ -2,23 +2,19 @@
 Hash: SHA256
 
 DIST bcpkix-jdk15on-150.tar.gz 1149901 SHA256 0be5bb948ec481b3d1f30ee80ef593b298b3782697f9eeee5c74cf270689b520 SHA512 17c5a9aa8c04defab46987063f847ee5fdedfc42d51e29ecad5053e3df5895c2c01899edb9222c3dab3ecf204eac9744249163dc2c1572fa2becaaf0924d2eb3 WHIRLPOOL 07197f1271ffc965479badcfd6b75450e5b0744f93031dd3721406dcac04c3f360b0d537cde3efa0f44f9ac06b4427a60f00743bfacd8dc7cf0a3d70193d5b32
+DIST bcpkix-jdk15on-152.tar.gz 1214022 SHA256 518205ea86f215a79267b7a64ea7ce29261f4983be1d3c2f6b6aa533092ce400 SHA512 a30f08aa6ae646219012b6e4763e57bd9021358ddc7d5ea588deb808a5555f67cc212a7d8cdc2a552922f550989d88965ba204521dd5bd9b17cfdb9ed09c3b5f WHIRLPOOL e9f855dc2571643fafaaa2167ba9afb5c34691966d86e6e712a5411467d47bcdac5fa15f5a3f736eb05092c25190e42c2fb40bbbce42d7dadd6fdce63fc8451a
 EBUILD bcpkix-1.50.ebuild 2544 SHA256 694088d2223fe6043ab19b19ffbb53968d0f362ecdaecc3dbc322512973c1eaf SHA512 d7238f20e07074918af8fe708d5582501922d02abbc9e045bef1822441743713fd9964e5ca89b52af2c73c41cd34b9ffbbc0995112d3ff324b8ce350aba175df WHIRLPOOL 17905431f0249f8a3ccd4f28b114448207f1b177c18540801f3db64223bd46d085f14becc64c1f4c8d274aade7fdb89fbb822709d2fcc911d5380b552be59a91
-MISC ChangeLog 1739 SHA256 c9d922168a9a812bf114eecdcb4feff5dcf2424ec56dcfd8a7ffd38685390f72 SHA512 1b57139a6c3a24e8750855aed4b711d815877d42c3c0a09a090c18f0b4c5b1da5a423926106a273eee98c3c0a12c8209c354b3faac9667b7f6e6c8b135b810b8 WHIRLPOOL 9d7ee2e5caa677390d3d8da1811916ebd4bc1bf29cc3230f99e2dd6f863fb44196cd62988f33a483a0aa6fd8e11a6d71faa98771d3ec6682257a33520dcb5d2b
+EBUILD bcpkix-1.52.ebuild 2539 SHA256 8261aefeb063b2eb282c5accec5d38cf9b7aad5146027c9ce20416e638a72eb2 SHA512 b04b74a89c25e550d77f95c18a14c34ffaceb216e5cc55b42dc9f8fe78907e5a8d8f575c68628dfb3655c202c3d3165909ee6db1837f7f336911a72abd1a2c34 WHIRLPOOL 24836a0f2002adb241a7babf5578634072481e11e2ac712f3ad30dee16a52731711f007e33400cd468ae682c15c48167fca5db2b3afbdce35a2027494fdf23f6
+MISC ChangeLog 1883 SHA256 0ebcb6e4aa4dfe160cb9d56af83626bfafdd002a9b9c7c7c332259b3faa38df9 SHA512 c646cff6625dd759487338b3badbc77a344c18d9ecee77f4faa18d458fbc71bdf75910bee9384ff87e1a6f55e320222b792ea0486ac5f2a7710760c2f9955ee2 WHIRLPOOL 8aeb26eba12dc20ce4f588726c6738c20ff04f405195cbd80583f4b8cb115990d6708b69dac9b45f79397571e3c230c108decf814fa0243edb6dda31dc8c8aa5
 MISC metadata.xml 158 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb SHA512 54f88fc3270968439ba87295b04365a89101c55d33a8c209a56036dc60244e5c73f78ec09484b3e5af28de9dee2159b1dab670cbd5d80a9e0c4543145c0390a3 WHIRLPOOL fcffc4fb6751b5a6eec33aa833f9d7dea0168d3ab67f7e34565370f92fd917ed882bcc57585481bf4d31e601f83a592d99d1c3f50fc793f1c38cd174cc8b2f26
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVWv0GAAoJELp701BxlEWfpdIQALNJz9gMUYmHlTAZalTvIuah
-Cgmf3IVt2k5Me6QB/ulSuAR27WM6nR3Yyn4w4lPs4jbWr7EgygCp1U60gGMMppws
-bx3MrmMJbvhr2OLYF0Fugfu3SzBAT6hrAvdD30GOgafLqT+vd3znBftkbSo+FhL4
-IPhdTvZuqZzAH+VfeAOVWvtbUgyy+uPUHhakE1qZcIpp7lBnK2A2FuiV23n0qdHO
-/U0CFUmsVnhhr5BFqv/zh4aDf9T5HuRQcjrB38D2PHrZASoQrs1AvifevsZaCwNv
-9mqx2rrShQ/YIS9dMNlTKPua640s+a8M85+7F9+ZAxJ9jJPXk+PfzXgznNFLckcV
-a7twWp1cLITTdIVcYtdk0DWb5BZ9Wth96nQpyv95mk61Dt06H191HvYMhx28gIGv
-kQI0d/9FF4IOAHRFQFwjbk4yqVBlqf8SlW14wx3lV+gYezNF+7LEziSsRUejvpH6
-tsZerYn4Kao15pgSpUTMDYhTbJwIBLj3CoIJZjpP4Msz4hK/Sn0UVJf4qrhAvZoP
-wqR7JesA1k7yoaoFaEcT7P5sTg8dB2lvHfetN7q8l+oqH+vSxjRaiWf2JjQE6wUG
-yy7buR2ex+HV3/4WM08GRO6ycd757uIKTVCT6lxoKmDAArBYCuCqqQ5XG02PPJqY
-JIgcm2pLC0HLozv3M2PJ
-=c0ck
+iQEcBAEBCAAGBQJVvQKcAAoJEJGRpfGTSRu4F9cH/Akyff0xb1S/j9a/xLLcRjEe
+tGSkSYHkVqddC272q3jRnh+Ksmc/gNpxehbMBz4ZJnNz4+xLGnl13EgVoL6PoQ3D
+zUGUe2jt30Klu9wEv1qQKkw6byWLjf3DQKOPPUL12BA6oJvS87ILgpPm/aG7bIpt
+GxXhkG8Q7NzczYUSPBEfyf/HF5B0KZK9TsVd4iEzj5wIeiVcHG43/eRgzjDImGUQ
+qLTj8wSkJ7hSYMddpFEa6bwYU5qBkphVY/LXzexLUSouLEWHAZWLEiUAFpGABLBJ
+yZuFBU58Fpf2QPG1JwZH6DPZpNCmb1ctRtMYLGT/2+EIkUniEZS4MDcV9EshjSo=
+=p25H
 -----END PGP SIGNATURE-----
